body overflow bug with mobile menu fixed

--- a/src/assets/css/norm.scss
+++ b/src/assets/css/norm.scss
@@ -46,6 +46,9 @@ p {
 	line-height: 28px;
 }
 
+.hidden {
+	overflow: hidden;
+}
 
 // general custom styles
 
